--- a/Front-end-ONE/03.Front-End-UI/FlexBox/index.html
+++ b/Front-end-ONE/03.Front-End-UI/FlexBox/index.html
@@ -4,9 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mini Alura | Cursos online</title>
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/flexbox.css">
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/flexbox.css">
+	
 </head>
 <body>
 
