--- a/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
+++ b/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
@@ -7,13 +7,18 @@
     <title>Home | Apeperia</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/bases.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/head.css">
     <link rel="stylesheet" href="./css/llamada.css">
-    <link rel="stylesheet" href="./css/bases.css">
-
+    
     <link rel="stylesheet" href="./css/diferenciales.css">
     <link rel="stylesheet" href="./css/sobre-nosotros.css">
+
+    <link rel="stylesheet" href="./css/contacto.css">
+    <link rel="stylesheet" href="./css/institucional.css">
+
+    <link rel="stylesheet" href="./css/destacados.css">
 
   </head>
   <body>
@@ -36,6 +41,27 @@
         <p class="llamada__texto">Apeperia es una empresa emergente con una manera inovadora de comprar y crear aplicaciones móviles y web.</p>
         <a class="llamada__boton boton" href="#">Conozca los planes</a>
       </section>
+
+      <section class="destacados container">
+        <h2 class="destacados__titulo"></h2>
+        <a href="#">
+          <figure class="destacados__panel">
+            <img src="./img/empezando-a-crear-logo.png" alt="" class="destacados__panel-imagen">
+            <figC class="destacados__panel-texto"></figC>
+          </figure>
+        </a>
+        <a href="#">
+          <figure class="destacados__panel">
+            <img src="./img/sugestiones-fotografias.png" alt="" class="destacados__panel-imagen">
+            <figC class="destacados__panel-texto"></figC>
+          </figure>
+        </a><a href="" class="destacados__boton"></a></section>
+
+
+
+
+
+
 
       <section class="diferenciales container">
         <ul class="diferenciales__lista">
@@ -76,6 +102,47 @@
             </ul>
             <p class="sobre_nosotros__texto">Desarrollamos aplicaciones para todas plataformas</p>
         </div>
+      </section>
+
+      <section class="planes container">
+        <h2 class="planes__titulo">Planes</h2>
+        <ul class="planes__tarjetas">
+            <li class="tarjetas tarjetas--start">
+                <h3 class="tarjetas__titulo">Start</h3>
+                <articule class="tarjetas__contenido">
+                    <p class="tarjetas__precio"><em>$ 500</em></p>
+                    <p class="tarjetas__texto">5 manutenciones mensuales</p>
+                    <p class="tarjetas__texto">App SEO</p>
+                    <p class="tarjetas__texto">1 sistema operacional</p>
+                    <a href="#" class="tarjetas__boton tarjetas__boton--start boton">Asignar plan</a>
+                </articule>
+            </li>
+            <li class="tarjetas tarjetas--ultra">
+                <h3 class="tarjetas__titulo">Ultra</h3>
+                <articule class="tarjetas__contenido">
+                    <p class="tarjetas__precio"><em>$ 1500</em></p>
+                    <p class="tarjetas__texto">20 manutenciones mensuales</p>
+                    <p class="tarjetas__texto">App SEO</p>
+                    <p class="tarjetas__texto">4 sistemas operacionales</p>
+                    <a href="#" class="tarjetas__boton tarjetas__boton--ultra boton">Asignar plan</a>
+                </articule>
+            </li>
+            <li class="tarjetas tarjetas--mega">
+                <h3 class="tarjetas__titulo">Mega</h3>
+                <articule class="tarjetas__contenido">
+                    <p class="tarjetas__precio"><em>$ 1500</em></p>
+                    <p class="tarjetas__texto">10 manutenciones mensuales</p>
+                    <p class="tarjetas__texto">App SEO</p>
+                    <p class="tarjetas__texto">2 sistemas operacionales</p>
+                    <a href="#" class="tarjetas__boton tarjetas__boton--mega boton">Asignar plan</a>
+                </articule>
+            </li>
+        </ul>
+      </section>
+      <section class="contacto container">
+        <h2 class="contacto__titulo">Contacto</h2>
+        <p>Entre en contacto con nosotros</p>
+        <a href="#" class="contacto_boton boton">Entre en contacto</a>
       </section>
 
     </main>
