03. Particularidades de las pantallas - 04. Unidades de medida Viewport parte 2

--- a/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
+++ b/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
@@ -7,8 +7,9 @@
     <title>Home | Apeperia</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bases.css">
+    
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/bases.css">
     <link rel="stylesheet" href="./css/head.css">
     <link rel="stylesheet" href="./css/llamada.css">
     
@@ -35,6 +36,7 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <section class="llamada container">
         <h1 class="llamada__titulo">Aplicaciones en la medida</h1>
@@ -43,19 +45,19 @@
       </section>
 
       <section class="destacados container">
-        <h2 class="destacados__titulo"></h2>
+        <h2 class="destacados__titulo">Destacados</h2>
         <a href="#">
           <figure class="destacados__panel">
-            <img src="./img/empezando-a-crear-logo.png" alt="" class="destacados__panel-imagen">
-            <figC class="destacados__panel-texto"></figC>
+            <img src="./img/empezando-a-crear-logo.png" alt="Painel de la publicación sobre la creación del logotipo" class="destacados__panel-imagen">
+            <figC class="destacados__panel-texto">Conozca las primeras etapas de la creación de un logotipo</figC>
           </figure>
         </a>
         <a href="#">
           <figure class="destacados__panel">
-            <img src="./img/sugestiones-fotografias.png" alt="" class="destacados__panel-imagen">
-            <figC class="destacados__panel-texto"></figC>
+            <img src="./img/sugestiones-fotografias.png" alt="Painel de la publicación sobre consejos de fotografía" class="destacados__panel-imagen">
+            <figC class="destacados__panel-texto">¿Trabajas con fotografía? Conozca esos consejos</figC>
           </figure>
-        </a><a href="" class="destacados__boton"></a></section>
+        </a><a href="" class="destacados__boton boton">Recibir destacados por correo</a></section>
 
 
 
@@ -146,5 +148,7 @@
       </section>
 
     </main>
+
+
   </body>
 </html>
