--- a/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
+++ b/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
@@ -21,6 +21,8 @@
 
     <link rel="stylesheet" href="./css/destacados.css">
 
+    <link rel="stylesheet" href="./css/footer.css">
+
   </head>
   <body>
     <header class="head container">
@@ -61,21 +63,17 @@
 
 
 
-
-
-
-
       <section class="diferenciales container">
         <ul class="diferenciales__lista">
-            <li class="diferenciales__item">
+            <li class="diferenciales__item diferenciales__item-reloj">
                 <h2 class="item__titulo">Tiempo</h2>
                 <p class="item__texto">¡El tiempo es importante! Trabajamos en ritmo acelerado, para atender los plazos rigurosamente.</p>
             </li>
-            <li class="diferenciales__item">
+            <li class="diferenciales__item diferenciales__item-dinero">
                 <h2 class="item__titulo">Enfoque</h2>
                 <p class="item__texto">Focamos en el pequeño y medio emprendedor, ofrecemos servicios de calidad con precios accesibles.</p>
             </li>
-            <li class="diferenciales__item">
+            <li class="diferenciales__item diferenciales__item-quimica">
                 <h2 class="item__titulo">Especialistas</h2>
                 <p class="item__texto">Equipo especializada, con experiencia de mercado. Testamos todos los productos antes del lanzamiento.</p>
             </li>
@@ -106,6 +104,12 @@
         </div>
       </section>
 
+
+
+
+
+
+      
       <section class="planes container">
         <h2 class="planes__titulo">Planes</h2>
         <ul class="planes__tarjetas">
