--- a/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
+++ b/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
@@ -171,6 +171,24 @@
         </address>
         <video src="./img/formacion-java.mp4" class="institucional__video" controls></video>
 
+        <footer class="footer container">
+          <img src="./img/logo-apeperia.svg" alt="" class="footer__logo">
+          <ul class="footer__social">
+            <li><a href="#" class="footer__midia"><img src="./img/facebook.png" alt="Icono de Facebook"></a></li>
+            <li><a href="#" class="footer__midia"><img src="./img/instagram.png" alt="Icono de Instagram"></a></li>
+            <li><a href="#" class="footer__midia"><img src="./img/twitter.png" alt="Icono de Twitter"></a></li>
+          </ul>
+          <nav>
+            <ul class="footer__navegacion">
+              <li class="footer__enlace"><a href="#">Sobre</a></li>
+              <li class="footer__enlace"><a href="#">Planes</a></li>
+              <li class="footer__enlace"><a href="#">Blog</a></li>
+              <li class="footer__enlace"><a href="#">Destacados</a></li>
+              <li class="footer__enlace"><a href="#">Institucional</a></li>
+              <li class="footer__enlace"><a href="#">Contacto</a></li>
+            </ul>
+          </nav>
+        </footer>
 
 
 
