05. Evolución: Del mobile al descktop - 06. Adaptación estructural

--- a/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
+++ b/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
@@ -164,7 +164,7 @@
           Villa Mariana, São Paulo
           <article class="institucional__contacto">
             <p>
-              <a href="tel:+551155712751" class="institucional__contacto-telefono">+55 11 55712751</a>
+              <a href="tel:+551155712751" class="institucional__contacto-telefono">+55 11 55712751</a> o 
               <a href="contato@apeperia.com" class="institucional__contacto-email">contato@apeperia.com</a>
             </p>
           </article>
