--- a/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
+++ b/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/index.html
@@ -159,41 +159,48 @@
 
       <section class="institucional container">
         <h2 class="institucional__titulo">Institucional</h2>
-        <p class="institucional__descripcion">Un poco más sobre Apeperia</p>
-        <address class="institucional__direccion">
-          Calle Vergueiro, 3185</br>
-          Villa Mariana, São Paulo
-          <article class="institucional__contacto">
-            <p>
-              <a href="tel:+551155712751" class="institucional__contacto-telefono">+55 11 55712751</a> o 
-              <a href="contato@apeperia.com" class="institucional__contacto-email">contato@apeperia.com</a>
-            </p>
-          </article>
-        </address>
-        <video src="./img/formacion-java.mp4" class="institucional__video" controls></video>
+        <div class="institucional__contenido">
+          <div class="institucional__informaciones">
+            
+            <p class="institucional__descripcion">Un poco más sobre Apeperia</p>
+            <address class="institucional__direccion">
+              Calle Vergueiro, 3185</br>
+              Villa Mariana, São Paulo
+              <article class="institucional__contacto">
+                <p>
+                  <a href="tel:+551155712751" class="institucional__contacto-telefono">+55 11 55712751</a> o 
+                  <a href="contato@apeperia.com" class="institucional__contacto-email">contato@apeperia.com</a>
+                </p>
+              </article>
+            </address>
+          </div>
+      
+          <video src="./img/formacion-java.mp4" class="institucional__video" controls></video>
 
-        <footer class="footer container">
-          <img src="./img/logo-apeperia.svg" alt="" class="footer__logo">
-          <ul class="footer__social">
-            <li><a href="#" class="footer__midia"><img src="./img/facebook.png" alt="Icono de Facebook"></a></li>
-            <li><a href="#" class="footer__midia"><img src="./img/instagram.png" alt="Icono de Instagram"></a></li>
-            <li><a href="#" class="footer__midia"><img src="./img/twitter.png" alt="Icono de Twitter"></a></li>
-          </ul>
-          <nav>
-            <ul class="footer__navegacion">
-              <li class="footer__enlace"><a href="#">Sobre</a></li>
-              <li class="footer__enlace"><a href="#">Planes</a></li>
-              <li class="footer__enlace"><a href="#">Blog</a></li>
-              <li class="footer__enlace"><a href="#">Destacados</a></li>
-              <li class="footer__enlace"><a href="#">Institucional</a></li>
-              <li class="footer__enlace"><a href="#">Contacto</a></li>
-            </ul>
-          </nav>
-        </footer>
-
-
-
+        </div>
       </section>
+
+      <footer class="footer container">
+        <img src="./img/logo-apeperia.svg" alt="" class="footer__logo">
+        <ul class="footer__social">
+          <li><a href="#" class="footer__midia"><img src="./img/facebook.png" alt="Icono de Facebook"></a></li>
+          <li><a href="#" class="footer__midia"><img src="./img/instagram.png" alt="Icono de Instagram"></a></li>
+          <li><a href="#" class="footer__midia"><img src="./img/twitter.png" alt="Icono de Twitter"></a></li>
+        </ul>
+        <nav>
+          <ul class="footer__navegacion">
+            <li class="footer__enlace"><a href="#">Sobre</a></li>
+            <li class="footer__enlace"><a href="#">Planes</a></li>
+            <li class="footer__enlace"><a href="#">Blog</a></li>
+            <li class="footer__enlace"><a href="#">Destacados</a></li>
+            <li class="footer__enlace"><a href="#">Institucional</a></li>
+            <li class="footer__enlace"><a href="#">Contacto</a></li>
+          </ul>
+        </nav>
+      </footer>
+
+
+
 
 
 
