01. Definiendo el diseño base - 03. Definiendo el diseño base

--- a/Front-end-ONE/03.Front-End-UI/CSS-Grid/index.html
+++ b/Front-end-ONE/03.Front-End-UI/CSS-Grid/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alura Store | Descargue nuestros aplicactivos y juegos</title>
+
     <link href="./assets/css/normalize.css" rel="stylesheet">
     <link href="./assets/css/reset.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
@@ -16,12 +17,17 @@
 </head>
 <body class="app">
     <header class="encabezado">
-        
+        Encabezado
     </header>
-    <main class="contenido">
 
+
+    <main class="contenido">
+        Contenido
     </main>
+
+
     <footer class="rodapie">
+        footer
     </footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
