--- a/Front-end-ONE/03.Front-End-UI/CSS-Grid/index.html
+++ b/Front-end-ONE/03.Front-End-UI/CSS-Grid/index.html
@@ -361,9 +361,7 @@
     </main>
 
 
-    <footer class="rodapie">
-        footer
-    </footer>
+    <footer class="rodapie">Todos los derechos reservados &copy 2022</footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
