05.Dejar el sitio receptivo - 02.Sección de destacados

--- a/Front-end-ONE/03.Front-End-UI/CSS-Grid/index.html
+++ b/Front-end-ONE/03.Front-End-UI/CSS-Grid/index.html
@@ -12,8 +12,8 @@
 
     <link rel="stylesheet" href="./assets/css/destacados.css">
     <link rel="stylesheet" href="./assets/css/populares.css">
-
     <link rel="stylesheet" href="./assets/css/menu.css">
+    <link rel="stylesheet" href="./assets/css/responsivo.css">
 
     
     
