--- a/Front-end-ONE/04.Sitios-interactivos/01.Manipulacion-del-DOM-con-Js/index.html
+++ b/Front-end-ONE/04.Sitios-interactivos/01.Manipulacion-del-DOM-con-Js/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
+  
   <body>
     <main>
       <div class="mainCard">
