Se crea una rama clase02 -- 02. Comportamiento del formulario - 02. Escuchando eventos

--- a/Front-end-ONE/04.Sitios-interactivos/01.Manipulacion-del-DOM-con-Js/index.html
+++ b/Front-end-ONE/04.Sitios-interactivos/01.Manipulacion-del-DOM-con-Js/index.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+
+    <script defer src="./script.js"></script>
   </head>
   
   <body>
@@ -31,7 +33,7 @@
               class="inputForm"
               autocomplete="off"
             />
-            <button type="submit" class="btnCreate">
+            <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
