03.Agregar una tarea a la lista - 03.Creando un elemento -- Clase03 Completada

--- a/Front-end-ONE/04.Sitios-interactivos/01.Manipulacion-del-DOM-con-Js/index.html
+++ b/Front-end-ONE/04.Sitios-interactivos/01.Manipulacion-del-DOM-con-Js/index.html
@@ -39,10 +39,8 @@
             </button>
           </form>
         </div>
-        <ul class="cardsList">
-          <li class="card" data-task>
+        <ul class="cardsList" data-list>
 
-          </li>
         </ul>
       </div>
     </main>
