--- a/Front-end-ONE/04.Sitios-interactivos/01.Manipulacion-del-DOM-con-Js/index.html
+++ b/Front-end-ONE/04.Sitios-interactivos/01.Manipulacion-del-DOM-con-Js/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
 
-    <script defer src="./script.js"></script>
+    <script defer type="module" src="./script.js"></script>
   </head>
   
   <body>
