01.Trabajando con fechas - 05.Formateando la fecha

--- a/Front-end-ONE/04.Sitios-interactivos/02.Almacenando datos en el navegador/index.html
+++ b/Front-end-ONE/04.Sitios-interactivos/02.Almacenando datos en el navegador/index.html
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js" ></script>
     <script defer type="module" src="./script.js"></script>
   </head>
   
@@ -34,7 +35,7 @@
               autocomplete="off"
               data-form-input
             />
-            <input type="datetime-local" data-form-date>
+            <input type="datetime-local" data-form-date placeholder="YYYY/MM/DD" />
 
 
 
