--- a/Front-end-ONE/04.Sitios-interactivos/02.Almacenando datos en el navegador/index.html
+++ b/Front-end-ONE/04.Sitios-interactivos/02.Almacenando datos en el navegador/index.html
@@ -16,8 +16,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
     <script defer type="module" src="./script.js"></script>
   </head>
   
